<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/image_dyna"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginRight="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_office"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/txtOffice"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginRight="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_contact"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtContact"
                    android:textSize="11sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_faq"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtFaq"
                    android:textSize="11sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">
                <Switch
                    android:id="@+id/iSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Vi"
                    android:thumb="@drawable/custom_switch"
                    android:trackTint="#9e9f9f"
                    android:textOn="En"
                    android:showText="true"
                    android:track="@drawable/custom_track"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:src="@drawable/logo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_user"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#ffff"
                        app:hintTextAppearance="@style/EditText">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/txtUserName"
                            android:textColorHint="#ffff"
                            android:inputType="text"
                            android:textSize="13sp"
                            android:textColor="#ffff"
                            android:textCursorDrawable="@drawable/color_edt"
                            android:theme="@style/TextLabel"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:paddingLeft="30dp"
                android:textColor="#ed0a0a"
                android:textSize="10sp"
                android:visibility="invisible"
                android:textStyle="italic"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.7">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_pass"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:textColorHint="#ffff"
                        app:passwordToggleEnabled="true"
                        app:hintTextAppearance="@style/EditText">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/txtPass"
                            android:textColorHint="#ffff"
                            android:textSize="13sp"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:textColor="#ffff"
                            android:ems="10"
                            android:textCursorDrawable="@drawable/color_edt"
                            android:theme="@style/TextLabel"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:paddingLeft="30dp"
                android:textSize="10sp"
                android:textColor="#ed0a0a"
                android:visibility="invisible"
                android:textStyle="italic"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtYetLogin"
                    android:textColor="#fff"
                    android:textAlignment="textEnd"
                    android:textStyle="italic"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <Button
                    android:background="@drawable/bg_btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffff"
                    android:text="@string/txtLogin" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginTop="35dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/txtNotLogin"
                android:textColor="#ffff"
                android:gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#eda406"
                    android:textAlignment="textStart"
                    android:textSize="11sp"
                    android:text="@string/txtfinance"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/txtVersion"
                    android:textSize="11sp"
                    android:textColor="#eda406"
                    android:textAlignment="textEnd"/>
            </LinearLayout>
            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:textColor="#ffff"
                android:textSize="11sp"
                android:text="@string/txtTerm"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>